2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/map-int-structs-17.pk: New test.
	* testsuite/poke.map/map-int-structs-18.pk: Likewise.
	* testsuite/poke.pkl/scons-int-struct-1.pk: Likewise.
	* testsuite/poke.pkl/scons-int-struct-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update with new tests.

2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/id3v2.pk: Moved from future and adapted to actual Poke.

2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_op_rela): Do not allow
	operands of type any.
	* testsuite/poke.pkl/eq-any-diag-1.pk: New test.
	* testsuite/poke.pkl/neq-any-diag-1.pk (equalstructs): Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update with new tests.

2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-fold.c (pkl_fold_ps_cast): Fix masking of the
	resulting magnitude of converted offsets.
	* testsuite/poke.pkl/cast-offsets-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_inserter): Simplify code.
	(struct_mapper): Likewise.
	(struct_comparator): Likewise.
	(struct_constructor): Likewise.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Rename .arg to .let, support initialization
	expressions, and substitute RAS variables in literal C.
	* libpoke/pkl-gen.pks (struct_field_extractor): Make use of these
	new goodies.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support for .arg directives.
	* libpoke/pkl-gen.pks: Make use of them.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_mapper): Use macro arguments to
	access AST nodes instead of relying on the context.
	(array_valmapper): Likewise.
	(array_writer): Likewise.
	(array_bounder): Likewise.
	(array_constructor): Likewise.
	* libpoke/pkl-gen.c: Adjust accordingly.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>
